2003-01-30  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/interface.c (sp_ui_close_view): Get widget pointer before killing object

2003-01-28  Lauris Kaplinski  <lauris@kaplinski.com>

	* configure.in: Version 0.30pre

	* src/sp-image.c (sp_image_bbox): Calculate bbox properly

2003-01-28  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (SUBDIRS): Add intl, m4.
	(EXTRA_DIST): Add config.rpath.
	* configure.in (AC_OUTPUT): Add intl/Makefile, po/Makefile.in, m4/Makefile.

2003-01-28  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnrtype/codepages.h: Win9x codepage declarations

	* src/main.c (WinMain): Use new toplevel toolbox constructor

	* src/text-context.c (sp_text_context_root_handler): Added Gdk_U to unimode

	* src/libnrtype/nr-type-w32.c: Implement ANSI charset and styles

	* src/libnrtype/nr-type-directory.c (nr_type_directory_build): Honour
	stretch attribute in searches

	* src/toolbox.c (sp_maintoolbox_create_toplevel): Broke constructor
	into two parts to allow multiple toolboxes

	* src/interface.c (sp_ui_view_show_toolbox): New method
	(sp_ui_view_dock_toolbox): Ditto
	(sp_ui_view_remove_toolbox): Ditto
	(sp_ui_view_menu): Added menu items for creating toolboxes
	(sp_create_window): Pack toplevel hbox into window

2003-01-26  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/helper/art-utils.c (sp_vpath_from_bpath_transform_closepath): Moved
	array expansion to the right place (thanks to Lynn Kerby)

2003-01-25  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/dialogs/xml-tree.c (sp_xml_tree_dialog): Allow horizontal scrollbar
	so we do not expand window infinitely

	* src/sp-use.c (sp_use_update): Implemented by MenTaLguY
	(sp_use_modified): Ditto

	* src/libnr/nr-path.c (nr_curve_bbox): Implement fast and exact bbox (thanks to Nathan)
	(nr_curve_bbox_wind_distance): Use exact bbox

2003-01-25  Nathan Hurst  <Nathan.Hurst@infotech.monash.edu.au>

	* src/desktop-snap.c: Fixed vector snapping code, replaced horizontal and